fix: Downgrade to quarkus 3.18.4 (#236)